--- a/api_gateway/src/main/resources/webroot/assets/view/pay.html
+++ b/api_gateway/src/main/resources/webroot/assets/view/pay.html
@@ -1,3 +1,4 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
 <div class="set_backgroud_full_screen_img">
     <div class="container_center_div theme-showcase" ng-controller="PayCtrl">
         <div align="center" class="jumbotron">
